--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/github": "^4.0.0",
+    "dotenv": "^8.2.0",
     "event-stream": "^4.0.1"
   }
 }
