--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,6 @@ jobs:
         uses: actions/checkout@v2
       - name: log some metadata
         run: |
-          echo "::debug::[octostore]{my_metadata_key:my_metadata_value}"
+          echo "::debug::[barcelona]{my_metadata_key:my_metadata_value}"
       - name: capture metadata
         uses: ./ # Uses an action in the root directory
